--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,19 @@
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
-spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
+# DataSource Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/issuemanagement
+spring.datasource.username=postgres
+spring.datasource.password=1234
+spring.jpa.generate-ddl=false
+spring.jpa.show-sql=true
+
+#CodeFirst DbFirst
+spring.jpa.hibernate.ddl-auto=update
+
+
+logging.level.root= info
+logging.level.org.springframework.web=debug
+logging.level.org.hibernate=debug
+
+
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+#spring.datasource.url=jdbc:h2:mem:test;DB_CLOSE_DELAY=-1
