--- a/pom.xml
+++ b/pom.xml
@@ -41,15 +41,16 @@
             <artifactId>modelmapper</artifactId>
             <version>2.3.2</version>
         </dependency>
-        <!--		<dependency>-->
-        <!--			<groupId>org.postgresql</groupId>-->
-        <!--			<artifactId>postgresql</artifactId>-->
-        <!--			<scope>runtime</scope>-->
-        <!--		</dependency>-->
+        		<dependency>
+        			<groupId>org.postgresql</groupId>
+        			<artifactId>postgresql</artifactId>
+        			<scope>runtime</scope>
+        		</dependency>
         <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <version>1.4.200</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
@@ -66,6 +67,16 @@
         <!--			<artifactId>spring-security-test</artifactId>-->
         <!--			<scope>test</scope>-->
         <!--		</dependency>-->
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger2</artifactId>
+            <version>2.6.1</version>
+        </dependency>
+        <dependency>
+            <groupId>io.springfox</groupId>
+            <artifactId>springfox-swagger-ui</artifactId>
+            <version>2.6.1</version>
+        </dependency>
     </dependencies>
 
     <build>
