--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.jpa.hibernate.ddl-auto=update
 
 logging.level.root= info
 logging.level.org.springframework.web=debug
-logging.level.org.hibernate=debug
+logging.level.org.hibernate=warn
 
 
 #spring.h2.console.enabled=true
