--- a/src/webui/package.json
+++ b/src/webui/package.json
@@ -19,14 +19,11 @@
     "@angular/platform-browser": "~7.2.0",
     "@angular/platform-browser-dynamic": "~7.2.0",
     "@angular/router": "~7.2.0",
-    "@swimlane/ngx-datatable": "^14.0.0",
-    "core-js": "^2.5.4",
-    "rxjs": "~6.3.3",
-    "tslib": "^1.9.0",
-    "zone.js": "~0.8.26",
     "@ngx-translate/core": "^11.0.1",
     "@ngx-translate/http-loader": "^4.0.0",
+    "@swimlane/ngx-datatable": "^14.0.0",
     "bootstrap": "^4.1.1",
+    "core-js": "^2.5.4",
     "error-stack-parser": "^2.0.2",
     "file-saver": "^2.0.0",
     "font-awesome": "^4.7.0",
@@ -37,7 +34,10 @@
     "ngx-loading": "^3.0.1",
     "ngx-toastr": "^9.1.1",
     "popper.js": "^1.14.3",
-    "rxjs-compat": "^6.2.1"
+    "rxjs": "~6.3.3",
+    "rxjs-compat": "^6.3.3",
+    "tslib": "^1.9.0",
+    "zone.js": "~0.8.26"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.13.0",
